Ajout de Acheter Compos. et Notifs pour fournisseurs