@@ -1,46 +1,43 @@
 package ift2255.robotix.Controller.Utilisateur;
 
-import ift2255.robotix.Modeles.Composante;
-import ift2255.robotix.Modeles.Fournisseur;
-import ift2255.robotix.Modeles.GestionFournisseurs;
-import ift2255.robotix.Modeles.GestionComposantes;
+import ift2255.robotix.Modeles.*;
 import ift2255.robotix.View.Utilisateur.MenuView;
 import ift2255.robotix.View.Utilisateur.SearchFournisseurView;
 import javafx.scene.Scene;
 import javafx.scene.control.ComboBox;
-import javafx.scene.text.Text;
+import javafx.scene.control.Alert;
+import javafx.scene.control.ButtonType;
 import javafx.stage.Stage;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 public class SearchFournisseurController {
     private SearchFournisseurView searchFournMenuView;
     private Stage stage;
-    private HashMap<Fournisseur, List<Composante>> inv;
     private GestionFournisseurs fournisseurs;
     private GestionComposantes composantes;
+    private Utilisateur utilisateur = RegisterUtilisateur.getInstance().getUtilisateur();
 
     public SearchFournisseurController(Stage stage, SearchFournisseurView searchFournMenuView) {
-
         this.searchFournMenuView = searchFournMenuView;
         this.stage = stage;
-
         fournisseurs = new GestionFournisseurs();
         composantes = new GestionComposantes();
         reloadFournisseurs();
+
+        // Initialisation du contrôleur dans la vue
+        this.searchFournMenuView.setController(this);
     }
+
     public void init() {
         this.searchFournMenuView.getBackButton().setOnAction(e -> goBackMenu());
         this.searchFournMenuView.getTypeComboBox().addEventHandler(ComboBox.ON_HIDDEN, event -> {
             reloadFournisseurs(this.searchFournMenuView.getType());
-            //this.searchCompMenuView.afficherVue(printComposantes(inv));
         });
     }
-    public void reloadFournisseurs() {
 
+    public void reloadFournisseurs() {
         HashMap<Fournisseur, List<Composante>> i = new HashMap<>();
         for (Fournisseur f : fournisseurs.getFournisseurMap().values()) {
             i.put(f, composantes.chargerComposantes(f.getEmail()));
@@ -48,41 +45,35 @@ public class SearchFournisseurController {
         this.searchFournMenuView.afficherVue(i);
         init();
     }
-    public void reloadFournisseurs( String c) {
 
-        HashMap<Fournisseur, List<Composante>> i = new HashMap<Fournisseur, List<Composante>>();
+    public void reloadFournisseurs(String type) {
+        HashMap<Fournisseur, List<Composante>> i = new HashMap<>();
         for (Fournisseur f : fournisseurs.getFournisseurMap().values()) {
             List<Composante> comps = composantes.chargerComposantes(f.getEmail());
-            for (Composante cc : comps) {
-                System.out.println(f.getNom() + cc.getType() + c);
-                if (cc.getType().equals(c)) {
-                    Composante[] co = new Composante[1];
-                    co[0] = cc;
-                    List<Composante> l = Arrays.asList(co);
-                    i.put(f, l);
+            for (Composante c : comps) {
+                if (c.getType().equals(type)) {
+                    i.put(f, List.of(c));
                     break;
                 }
             }
         }
-        System.out.println(c);
         this.searchFournMenuView.afficherVue(i);
         init();
     }
 
-    public Text printFournisseurs(HashMap<Fournisseur, List<Composante>> i) {
+    public void handlePurchase(Composante composante, Fournisseur fournisseur) {
+        // Supprimer la composante du gestionnaire
+        composantes.supprimerComposante(composante.getId(), fournisseur.getEmail());
 
-        String name = "";
-        for (Map.Entry<Fournisseur, List<Composante>> entry : i.entrySet()) {
-            name += entry.getKey().getNom() + "\n";
-            for (Composante c : entry.getValue()) {
-                name += "\t" + c.getNom() + " -> Type: " + c.getType() + "\n";
-            }
-            name += "\n";
-        }
-        System.out.println(name);
-        return new Text(name);
+        // Envoyer une notification au fournisseur
+        NotifService.getInstance().sendNotifFournisseur(
+                fournisseur.getEmail(),
+                "La composante " + composante.getNom() + " a été achetée par l'utilisateur " + utilisateur.getEmail() + "."
+        );
+
+        // Rafraîchir la vue
+        reloadFournisseurs();
     }
-
 
     private void goBackMenu() {
         MenuView menuView = new MenuView();
@@ -90,5 +81,3 @@ public class SearchFournisseurController {
         stage.setScene(new Scene(menuView, 900, 700));
     }
 }
-
-
